# simple-calorie-tracker-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
calorie_tracker/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
static/common/css/: custom.css  openmoji.css
templates/: base.html  dashboard.html  login.html  onboarding.html  progress.html
templates/partials/: add_food_message.html  daily_summary.html  food_entry_row.html  meal_list.html  stepper.html
