[project]
name = "calorie-tracker-app"
version = "0.1.0"
description = "Calorie tracker app made in django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-mathfilters>=1.0.0",
    "python-dotenv>=1.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.sustech.edu.cn/pypi/web/simple"
default = true
